# mkunit

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml  systemd-monitor.yml
src/: cli.rs  error.rs  main.rs
src/commands/: completions.rs  edit.rs  link.rs  list.rs  logs.rs  mod.rs  mount.rs  path.rs  remove.rs  service.rs  show.rs  socket.rs  status.rs  target.rs  timer.rs  validate.rs
src/systemd/: mod.rs  paths.rs  version.rs
src/templates/: mod.rs
src/util/: color.rs  editor.rs  mod.rs  prompt.rs
templates/: mount.unit  path.unit  service.unit  socket.unit  target.unit  timer.unit
tests/: integration.rs
